src/corelib/io/qwindowspipewriter_p.h
@@ -143,7 +143,7 @@ private:
     };
 
     HANDLE handle;
-    Overlapped overlapped;
+    Overlapped *overlapped;
     QByteArray buffer;
     qint64 numberOfBytesToWrite;
     qint64 pendingBytesWrittenValue;
